# dot-context-engine

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
branding/: brand-sheet.html
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  main.tsx
dashboard/src/components/: ForceGraph.tsx  StatCard.tsx
dashboard/src/pages/: ContextPreview.tsx  Graph.tsx  Memories.tsx  Overview.tsx  Settings.tsx
docs/: architecture.md  foundations.md  getting-started.md  index.md  integrations.md  internals.md  try-it-locally.md
docs/assets/: extra.css
docs/assets/screenshots/: README.md
dot/: __init__.py  api.py  cli.py  config.py  daemon.py  doctor.py
dot-site/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json  vercel.json
dot-site/.github/workflows/: deploy.yml
dot-site/public/: robots.txt
dot-site/src/data/: icons.ts  integrations.ts  truths.ts
dot-site/src/layouts/: Base.astro  (+2 more)
dot/context/: __init__.py  assembler.py  formatter.py  ranker.py
dot/conversations/: __init__.py  claude_code.py  ingest.py  source.py  watcher.py
dot/indexer/: __init__.py  chunker.py  embedder.py  parser.py  watcher.py
dot/integrations/: __init__.py  claude.py  copilot.py  git.py  mcp.py
dot/memory/: __init__.py  decay.py  decisions.py  shared.py  store.py
marketing/: launch-post-hacker-news.md  launch-post-product-hunt.md  launch-post-twitter.md  medium-getting-started.md  social-preview-instructions.md
scripts/: generate_assets.py
tests/: conftest.py  test_api.py  test_cli_init.py  test_context.py  test_conversation_capture_integration.py  test_conversations.py  test_doctor.py  test_indexer.py  test_mcp.py  test_memory.py  test_shared.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: api.ts  commands.ts  contextProvider.ts  extension.ts  sidebar.ts
website/: index.html
(+32 files in other folders)
